# pyrexecd

./: LICENSE  LICENSE.txt  Makefile  PyRExecd.pyw  PyRexec.py  PyRexecd.py  PyRexecd.pyw  README.md  setup.cfg  setup.py  setup_exe.py
pyrexecd/: __init__.py
tools/: open.sh  rexec_cmd.sh  tmux.conf
