# setup.cfg
[metadata]
name = PyRExecd
version = 0.3.4
author = Yusuke Shinyama
author_email = yusuke@shinyama.jp
description = Standalone SSH server for Windows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/euske/pyrexecd
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Win32 (MS Windows)
    License :: OSI Approved :: MIT License
    Topic :: Utilities

[options]
packages =
    pyrexecd
scripts =
    PyRExecd.pyw
install_requires =
    paramiko
    pypiwin32

[options.package_data]
pyrexecd = icons/*.ico
